tests/paczka1/fuzzy1/81015427.err
Error in line 3: A798 S258 67,7
Error in line 12: xSbCqqF7 S258 60,30
Error in line 16: tiJ3dFG S258 58,8
Error in line 2: xSbCqqF7 A798 91,3
Error in line 27: xSbCqqF7 S926 50,8
